// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deck methods reset 1`] = `undefined`;

exports[`check deck generation Deck construction 1`] = `
Object {
  "cardSet": [Function],
  "deck": Any<Array>,
  "delt": Array [],
  "discards": Array [],
  "jokers": false,
  "noDecks": 1,
}
`;

exports[`check deck generation Deck construction with 2 decks 1`] = `
Object {
  "cardSet": [Function],
  "deck": Any<Array>,
  "delt": Array [],
  "discards": Array [],
  "jokers": false,
  "noDecks": 2,
}
`;

exports[`check deck generation Deck construction with 2 decks with jokers 1`] = `
Object {
  "cardSet": [Function],
  "deck": Any<Array>,
  "delt": Array [],
  "discards": Array [],
  "jokers": true,
  "noDecks": 2,
}
`;

exports[`check deck generation Deck construction with 2 decks with jokers 2`] = `
Deck {
  "cardSet": [Function],
  "deck": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
  ],
  "delt": Array [],
  "discards": Array [],
  "jokers": false,
  "noDecks": 3,
}
`;

exports[`check deck generation Deck construction with jokers 1`] = `
Object {
  "cardSet": [Function],
  "deck": Any<Array>,
  "delt": Array [],
  "discards": Array [],
  "jokers": true,
  "noDecks": 1,
}
`;
